launches grid's column aligning fixes

--- a/src/main/resources/public/scss/launchPage/suite-grid.scss
+++ b/src/main/resources/public/scss/launchPage/suite-grid.scss
@@ -34,11 +34,11 @@ $launch-min-counter-cell-width: (100 - $launch-min-name-cell-width - $launch-min
 .suit-grid {
   .grid-cell {
     &.name-grid-cell {
-      padding-left: 10px;
+      padding-left: 35px;
       width: $launch-name-cell-width;
       &.rp-grid-th {
         .text-overflow {
-          padding-left: 25px;
+          //padding-left: 25px;
         }
       }
     }
